# sdc_overtime

./: .gitignore  .gitmodules  Makefile  README.md  add_clean.zsh  makefile  overtime.1
asm/: Makefile
c001-递归解决分鱼问题/: .makefile  Makefile
c002-递归解决年龄问题/: Makefile  main.c
c003-printf转义/: Makefile  main.c
c004-二维数组指针/: Makefile  main.c
c005-(字符)数组与指针/: Makefile  main.c
c006-snprintf/: Makefile  main.c
c007-sprintf_snprintf/: Makefile  main.c
c008-getopt/: Makefile  getopt2.c  main.c
c009-getopt多次执行后/: Makefile  main.c
c010-字符串与指针与段错误/: Makefile  main.c
c011-NULL和空字符串的值是否为0/: Makefile  main.c
c012-前自增后自增/: Makefile  main.c
c013-copy_from_stdin_to_stdout/: Makefile  main.c
c014-实现more的功能/: Makefile  main.c
c015-字符串与printf/: Makefile  main.c
c016-自定义bool类型/: Makefile  main.c  stdbool.c
c017-注释版权/: Makefile  main.c
c018-判断字符串是否为纯数字/: Makefile  main.c
c019-overtime/: Makefile  README.md  overtime.1
c020-通讯录/: Makefile  main.c  telbook.data
c021-scanf-usage/: Makefile  formatstr.c  main.c
c022-当前时间/: Makefile  main.c
c023-判断指定日期为周几/: Makefile  main.c
c024-判断一月有几天/: Makefile  main.c
c025-文件读写/: Makefile  fprintf.c  myfile.txt  open_non-exist_file.c  read.c  rewind.c  score.data  write.c  write2.c  write3.c
c026-strcpy/: Makefile  main.c
c027-捕获换行-fgets-scanf用法/: Makefile  fgets.c  main.c
c028-验证字符串是否合法/: Makefile  main.c
c029-打印彩色字符/: Makefile  main.c
c030-静态数据区只能初始化一次/: Makefile  main.c
c031-链表/: Makefile  (+1 more)
c093-gtk/BuildSystem/: Makefile  meson.build  tfe.c  tfe.mk  tfe.vala  tfetextview.c  tfetextview.vala
(+340 files in other folders)
